--- a/docs/产品设计文档.md
+++ b/docs/产品设计文档.md
@@ -28,6 +28,10 @@
 - **内容生成Prompt模板**：自定义AI生成内容的提示词
 - **games.json参考格式**：定义输出JSON的字段和结构
 - **结构化数据选择**：可选择生成的结构化数据类型（game对象、视频对象、用户评价对象、面包屑对象、FAQ对象）
+- **内容长度控制**：设置生成内容的字数范围和模块分配
+- **关键词密度配置**：控制主关键词和长尾关键词的出现密度
+- **内容生成模式**：选择AI生成的自由度（严格/标准/自由）
+- **内容质量参数**：设置可读性、专业度、目标受众等要求
 
 #### 2.1.3 数据结构
 ```json
@@ -37,6 +41,30 @@
   "promptTemplate": "自定义Prompt模板",
   "gamesJsonFormat": "参考的games.json格式",
   "structuredDataTypes": ["game", "video", "review", "breadcrumb", "faq"],
+  "contentSettings": {
+    "wordCount": {
+      "total": { "min": 800, "max": 1200 },
+      "modules": {
+        "description": { "min": 200, "max": 300 },
+        "gameplay": { "min": 150, "max": 250 },
+        "features": { "min": 100, "max": 200 },
+        "reviews": { "min": 150, "max": 200 },
+        "videoDescription": { "min": 100, "max": 150 }
+      }
+    },
+    "keywordDensity": {
+      "mainKeyword": { "target": 2.5, "max": 3.5 },
+      "longTailKeywords": { "target": 1.5, "max": 2.5 },
+      "naturalDistribution": true
+    },
+    "generationMode": "standard", // strict | standard | free
+    "qualityParams": {
+      "readabilityLevel": "intermediate", // beginner | intermediate | advanced
+      "professionalTone": true,
+      "targetAudience": "gamers", // gamers | general | children
+      "creativeFreedom": true
+    }
+  },
   "createdAt": "2025-01-XX",
   "updatedAt": "2025-01-XX"
 }
@@ -73,37 +101,121 @@ Aventador Vice Crime City,car games unblocked,"unblocked car games,games to play
 
 ### 2.3 竞品内容采集模块
 
-#### 2.3.1 自动搜索功能
-- **搜索引擎集成**：通过搜索引擎API检索游戏相关竞品网站
-- **内容抓取**：自动抓取竞品网站的核心内容模块
-- **内容清洗**：提取有效信息，过滤无关内容
+#### 2.3.1 Sitemap采集功能
+- **网站源维护**：维护主要游戏网站的sitemap.xml列表
+- **自动更新机制**：定期抓取并解析sitemap.xml，保持竞品数据库最新
+- **游戏匹配算法**：基于游戏名称的智能匹配算法，支持模糊匹配和同义词识别
+- **本地缓存管理**：本地存储竞品游戏索引，提升匹配速度
 
-#### 2.3.2 采集范围
-- 游戏简介和描述
-- 玩法操作说明
-- 游戏特色介绍
-- 用户评价和评分
-- 相关标签和分类
+#### 2.3.2 支持的竞品网站
+- **CoolMathGames**：https://www.coolmathgames.com/sitemap.xml
+- **GameDistribution**：https://gamedistribution.com/sitemap-games-1.xml  
+- **TwoPlayerGames**：https://www.twoplayergames.org/sitemap-games.xml
+
+#### 2.3.3 匹配和抓取流程
+1. **Sitemap解析**：定期抓取各网站sitemap.xml，提取游戏页面URL
+2. **游戏名称匹配**：对用户提供的游戏名称进行智能匹配
+3. **相似度评分**：使用字符串相似度算法计算匹配度
+4. **页面内容抓取**：访问匹配度高的页面，抓取游戏内容
+5. **数量限制**：每个游戏最多抓取2个高匹配度的页面
+
+#### 2.3.4 本地竞品数据库
+```typescript
+interface CompetitorGame {
+  id: string;
+  gameName: string;
+  gameSlug: string;
+  gameUrl: string;
+  sourceWebsite: string;
+  sitemapUrl: string;
+  lastUpdated: Date;
+  matchingScore?: number;
+}
+
+interface CompetitorContent {
+  gameId: string;
+  sourceUrl: string;
+  sourceWebsite: string;
+  title: string;
+  description: string;
+  gameplayInstructions?: string;
+  features?: string[];
+  tags?: string[];
+  category?: string;
+  extractedAt: Date;
+}
+```
+
+#### 2.3.5 匹配算法策略
+- **精确匹配**：游戏名称完全相同（匹配度：100%）
+- **模糊匹配**：忽略大小写、特殊字符、空格（匹配度：90%+）
+- **关键词匹配**：提取核心关键词进行匹配（匹配度：70%+）
+- **同义词匹配**：支持常见游戏类型同义词（匹配度：60%+）
+
+#### 2.3.6 抓取内容范围
+- 游戏名称和描述
+- 游戏玩法说明
+- 游戏特色和亮点
+- 游戏分类和标签
+- 用户评价片段（如有）
+- 相关游戏推荐
+
+#### 2.3.7 错误处理机制
+- **无匹配游戏**：提示"未找到竞品内容，将使用基础模板生成"
+- **网络异常**：自动重试机制，最多重试3次
+- **解析错误**：记录错误日志，跳过有问题的页面
+- **内容为空**：标记为无效内容，不参与生成过程
 
 ### 2.4 AI内容生成模块
 
 #### 2.4.1 生成流程
 1. **输入预处理**：清理和优化games.json格式，控制Prompt长度
-2. **竞品内容整合**：将采集的竞品内容整合到生成上下文
-3. **并行生成**：支持多游戏并行处理，提升生成效率
-4. **内容校验**：验证生成内容的格式和完整性
+2. **内容参数配置**：应用字数控制、关键词密度等设置
+3. **竞品内容整合**：将采集的竞品内容整合到生成上下文
+4. **智能Prompt构建**：根据生成模式和质量参数构建Prompt
+5. **并行生成**：支持多游戏并行处理，提升生成效率
+6. **内容校验**：验证生成内容的格式、字数、关键词密度等
+7. **质量评估**：评估内容质量并提供优化建议
 
 #### 2.4.2 Prompt优化策略
 - **字段名保留**：完整保留games.json的字段名
 - **值格式简化**：数组值简化为`["s","b"]`格式，保留类型信息
 - **长度控制**：自动控制Prompt总长度，优先保证核心信息
+- **参数集成**：将字数要求、关键词密度、生成模式等参数融入Prompt
+- **动态调整**：根据内容生成模式动态调整Prompt策略
 
 #### 2.4.3 生成内容模块
-- 游戏简介
-- 玩法操作
-- 游戏特色
-- 玩家真实好评
-- 视频内容描述
+- **游戏简介** (200-300词)：包含主关键词，介绍游戏核心玩法
+- **玩法操作** (150-250词)：详细说明游戏操作方式和规则
+- **游戏特色** (100-200词)：突出游戏独特功能和亮点
+- **玩家真实好评** (150-200词)：模拟真实用户评价和反馈
+- **视频内容描述** (100-150词)：如有视频链接，生成视频内容描述
+
+#### 2.4.4 内容生成模式详解
+- **严格模式 (Strict)**：
+  - 严格按照设定的字数范围生成
+  - 精确控制关键词密度
+  - 只生成必要的内容模块
+  - 适合有明确内容规范的网站
+
+- **标准模式 (Standard)**：
+  - 在字数范围内适度灵活
+  - 自然融入关键词，保持可读性
+  - 可适当增加相关信息丰富内容
+  - 平衡SEO效果和用户体验
+
+- **自由模式 (Free)**：
+  - AI可自由发挥，增加创意内容
+  - 自然的关键词分布，避免过度优化
+  - 可增加游戏技巧、背景故事等额外内容
+  - 注重内容质量和用户吸引力
+
+#### 2.4.5 关键词密度控制机制
+- **密度计算**：实时计算关键词出现频率
+- **自然分布**：确保关键词在各段落中自然分布
+- **同义词替换**：使用同义词避免关键词堆砌
+- **语义相关**：融入语义相关的词汇增强相关性
+- **质量监控**：监控内容可读性，避免过度优化
 
 ### 2.5 结构化数据生成模块
 
@@ -347,7 +459,7 @@ interface SidebarProps {
 - 结果查看：文档图标
 
 // 设计要点：
-- 菜单项：高度48px，圆角4px，悬停效果
+- 菜单项：高度48px，圆角4px悬停效果
 - 激活状态：蓝色背景，白色文字
 - 图标：16x16px，与文字左对齐
 - 分组：用细分割线区分不同功能区
@@ -369,6 +481,8 @@ interface WorkflowPageProps {
 │  ┌─────────────────────────────────────────┐ │
 │  │  工作流卡片列表                           │ │
 │  │  - 工作流名称 + 描述                     │ │
+│  │  - 内容设置：字数800-1200，密度2.5%      │ │
+│  │  - 生成模式：标准模式                     │ │
 │  │  - 创建时间 + 最后修改                   │ │
 │  │  - 操作按钮：编辑/复制/导出/删除          │ │
 │  └─────────────────────────────────────────┘ │
@@ -379,6 +493,7 @@ interface WorkflowPageProps {
 - 工具栏：按钮统一高度40px，间距16px
 - 卡片：圆角8px，阴影效果，悬停提升
 - 操作按钮：图标+文字，下拉菜单形式
+- 内容设置预览：小标签形式显示关键配置
 ```
 
 #### 3.5.4 数据上传界面
@@ -422,24 +537,28 @@ interface GeneratePageProps {
 │  ⚡ 内容生成                                  │
 ├─────────────────────────────────────────────┤
 │  工作流：[下拉选择] 数据：✅ 23条游戏          │
+│  字数设置：800-1200词 | 关键词密度：2.5%     │
+│  生成模式：标准模式 ⓘ                        │
 │  结构化数据：☑️游戏 ☑️视频 ☐评价             │
-│  [开始生成] [暂停] [停止]                     │
+│  [开始生成] [暂停] [停止] [高级设置]          │
 ├─────────────────────────────────────────────┤
 │  📊 生成进度：15/23 (65%)                    │
 │  ████████████░░░░░░                          │
 │  当前：生成"Aventador Vice Crime City"        │
+│  字数：923词 | 主关键词密度：2.3% ✅          │
 ├─────────────────────────────────────────────┤
 │  📋 生成结果预览 (实时更新)                   │
-│  - JSON格式化显示                            │
-│  - 语法高亮                                 │
-│  - 折叠展开                                 │
+│  - JSON格式化显示 + 内容质量评分             │
+│  - 语法高亮 + 关键词密度可视化               │
+│  - 折叠展开 + 字数统计                       │
 └─────────────────────────────────────────────┘
 
 // 设计要点：
-- 配置区：表单布局，标签清晰
+- 配置区：表单布局，标签清晰，提示图标
 - 进度条：蓝色填充，百分比显示
-- 状态文字：实时更新，动画效果
-- 预览区：代码编辑器样式，只读模式
+- 状态文字：实时更新，动画效果，质量指标
+- 预览区：代码编辑器样式，只读模式，质量评估
+- 高级设置：模态框形式，详细参数配置
 ```
 
 #### 3.5.6 结果查看界面
