--- a/docs/开发任务计划.md
+++ b/docs/开发任务计划.md
@@ -216,6 +216,7 @@
   - [x] 搜索和筛选功能
   - [x] 完整的CRUD操作
   - [x] 复制和设为默认功能
+  - [ ] **待补充** 内容设置预览显示(字数范围、关键词密度、生成模式)
 - [x] **4.1.2** 实现工作流创建功能 ✅ 已完成 2025-01-24
   - [x] 模态框设计(遮罩层+居中布局)
   - [x] 工作流基本信息表单
@@ -223,6 +224,10 @@
   - [x] games.json格式编辑器(语法高亮)
   - [x] 结构化数据类型选择(复选框组)
   - [x] 表单验证和错误提示
+  - [ ] **待补充** 内容长度控制配置界面
+  - [ ] **待补充** 关键词密度配置界面
+  - [ ] **待补充** 内容生成模式选择
+  - [ ] **待补充** 内容质量参数设置
 - [x] **4.1.3** 实现工作流编辑功能 ✅ 已完成 2025-01-24
   - [x] 编辑模态框复用创建组件
   - [x] 数据预填充和格式化
@@ -285,34 +290,34 @@
 
 ## 五、CSV数据处理模块 (Week 5-6)
 
-### 5.1 CSV上传与解析
+### 5.1 CSV上传与解析 ✅ 已完成 2025-01-24
 **优先级**: P0 | **复杂度**: 中等 | **预计时间**: 3天 | **依赖**: 3.2
 
 #### 子任务:
-- [ ] **5.1.1** 集成Papa Parse库
-- [ ] **5.1.2** 实现CSV文件上传组件
-  - [ ] 拖拽上传区域设计(虚线边框，居中布局)
-  - [ ] 文件选择按钮(Primary样式)
-  - [ ] 上传进度指示(进度条动画)
-  - [ ] 文件格式验证(仅允许.csv)
-  - [ ] 悬停和拖拽状态反馈
-- [ ] **5.1.3** 实现CSV格式解析
-  - [ ] 自动检测编码格式
-  - [ ] 处理不同分隔符
-  - [ ] 错误行标记和提示
-- [ ] **5.1.4** 添加字段映射功能
-  - [ ] 字段映射界面设计
-  - [ ] 下拉选择字段对应
-  - [ ] 必填字段验证提示
-- [ ] **5.1.5** 实现数据预览表格
-  - [ ] 表格样式设计(固定表头，行悬停)
-  - [ ] 分页或虚拟滚动
-  - [ ] 数据类型标识
-  - [ ] 错误数据高亮显示
-- [ ] **5.1.6** 添加大文件处理支持
-  - [ ] 分批解析处理
-  - [ ] 内存使用优化
-  - [ ] 处理进度显示
+- [x] **5.1.1** 集成Papa Parse库 ✅ 已完成 2025-01-24
+- [x] **5.1.2** 实现CSV文件上传组件 ✅ 已完成 2025-01-24
+  - [x] 拖拽上传区域设计(虚线边框，居中布局)
+  - [x] 文件选择按钮(Primary样式)
+  - [x] 上传进度指示(进度条动画)
+  - [x] 文件格式验证(仅允许.csv)
+  - [x] 悬停和拖拽状态反馈
+- [x] **5.1.3** 实现CSV格式解析 ✅ 已完成 2025-01-24
+  - [x] 自动检测编码格式
+  - [x] 处理不同分隔符
+  - [x] 错误行标记和提示
+- [x] **5.1.4** 添加字段映射功能 ✅ 已完成 2025-01-24
+  - [x] 字段映射界面设计
+  - [x] 下拉选择字段对应
+  - [x] 必填字段验证提示
+- [x] **5.1.5** 实现数据预览表格 ✅ 已完成 2025-01-24
+  - [x] 表格样式设计(固定表头，行悬停)
+  - [x] 分页或虚拟滚动
+  - [x] 数据类型标识
+  - [x] 错误数据高亮显示
+- [x] **5.1.6** 添加大文件处理支持 ✅ 已完成 2025-01-24
+  - [x] 分批解析处理
+  - [x] 内存使用优化
+  - [x] 处理进度显示
 
 ### 5.2 数据验证与清洗
 **优先级**: P0 | **复杂度**: 困难 | **预计时间**: 4天 | **依赖**: 5.1
@@ -340,38 +345,121 @@
 
 ## 六、竞品内容采集模块 (Week 6-7)
 
-### 6.1 搜索引擎集成
-**优先级**: P0 | **复杂度**: 困难 | **预计时间**: 4天 | **依赖**: 无
+### 6.1 Sitemap管理与解析
+**优先级**: P0 | **复杂度**: 中等 | **预计时间**: 3天 | **依赖**: 无
 
 #### 子任务:
-- [ ] **6.1.1** 研究并选择搜索API (Google/Bing)
-- [ ] **6.1.2** 实现搜索API调用
-- [ ] **6.1.3** 设计搜索关键词策略
-- [ ] **6.1.4** 实现搜索结果过滤
-- [ ] **6.1.5** 添加搜索结果排序
-- [ ] **6.1.6** 实现搜索缓存机制
+- [ ] **6.1.1** 定义竞品网站配置
+  - [ ] 创建网站配置数据结构
+  - [ ] 配置CoolMathGames sitemap
+  - [ ] 配置GameDistribution sitemap
+  - [ ] 配置TwoPlayerGames sitemap
+- [ ] **6.1.2** 实现Sitemap抓取服务
+  - [ ] HTTP请求服务
+  - [ ] XML解析功能
+  - [ ] 网络异常处理
+  - [ ] 请求重试机制
+- [ ] **6.1.3** 实现竞品数据库管理
+  - [ ] 本地存储结构设计
+  - [ ] 游戏索引创建
+  - [ ] 数据更新机制
+  - [ ] 过期数据清理
+- [ ] **6.1.4** 添加定时更新功能
+  - [ ] 定时任务调度
+  - [ ] 增量更新逻辑
+  - [ ] 更新状态追踪
+  - [ ] 更新日志记录
 
-### 6.2 网页内容抓取
-**优先级**: P0 | **复杂度**: 复杂 | **预计时间**: 5天 | **依赖**: 6.1
+### 6.2 游戏匹配算法
+**优先级**: P0 | **复杂度**: 困难 | **预计时间**: 4天 | **依赖**: 6.1
 
 #### 子任务:
-- [ ] **6.2.1** 实现网页内容抓取服务
-- [ ] **6.2.2** 添加反爬虫处理
-- [ ] **6.2.3** 实现内容解析算法
-- [ ] **6.2.4** 设计内容提取规则
-- [ ] **6.2.5** 实现内容去重机制
-- [ ] **6.2.6** 添加异常处理和重试
-- [ ] **6.2.7** 实现抓取进度监控
+- [ ] **6.2.1** 实现字符串相似度算法
+  - [ ] 编辑距离算法(Levenshtein)
+  - [ ] 余弦相似度算法
+  - [ ] Jaccard相似度算法
+  - [ ] 组合评分策略
+- [ ] **6.2.2** 实现游戏名称标准化
+  - [ ] 去除特殊字符
+  - [ ] 大小写标准化
+  - [ ] 空格和连字符处理
+  - [ ] 常见缩写展开
+- [ ] **6.2.3** 添加关键词提取功能
+  - [ ] 核心关键词识别
+  - [ ] 停用词过滤
+  - [ ] 游戏类型词典
+  - [ ] 权重计算策略
+- [ ] **6.2.4** 实现匹配结果排序
+  - [ ] 多维度评分
+  - [ ] 权重分配策略
+  - [ ] 结果去重逻辑
+  - [ ] TOP-N结果筛选
+- [ ] **6.2.5** 添加匹配阈值配置
+  - [ ] 可配置匹配阈值
+  - [ ] 动态阈值调整
+  - [ ] 匹配质量评估
+  - [ ] 性能优化策略
 
-### 6.3 内容清洗与结构化
-**优先级**: P1 | **复杂度**: 困难 | **预计时间**: 3天 | **依赖**: 6.2
+### 6.3 页面内容抓取与解析
+**优先级**: P0 | **复杂度**: 复杂 | **预计时间**: 5天 | **依赖**: 6.2
 
 #### 子任务:
-- [ ] **6.3.1** 实现HTML标签清理
-- [ ] **6.3.2** 添加文本内容提取
-- [ ] **6.3.3** 实现关键信息识别
-- [ ] **6.3.4** 添加内容质量评分
-- [ ] **6.3.5** 实现内容分类标记
+- [ ] **6.3.1** 实现通用内容抓取服务
+  - [ ] HTTP客户端配置
+  - [ ] User-Agent轮换
+  - [ ] 请求频率控制
+  - [ ] 并发请求管理
+- [ ] **6.3.2** 添加网站特定解析规则
+  - [ ] CoolMathGames解析规则
+  - [ ] GameDistribution解析规则
+  - [ ] TwoPlayerGames解析规则
+  - [ ] 通用HTML解析器
+- [ ] **6.3.3** 实现内容提取算法
+  - [ ] 游戏标题提取
+  - [ ] 游戏描述提取
+  - [ ] 玩法说明提取
+  - [ ] 特色功能提取
+  - [ ] 标签分类提取
+- [ ] **6.3.4** 添加内容清洗功能
+  - [ ] HTML标签清理
+  - [ ] 文本格式化
+  - [ ] 无效内容过滤
+  - [ ] 长度限制处理
+- [ ] **6.3.5** 实现内容质量评估
+  - [ ] 内容完整性检查
+  - [ ] 相关性评分
+  - [ ] 重复内容检测
+  - [ ] 质量分级标准
+- [ ] **6.3.6** 添加抓取进度监控
+  - [ ] 抓取状态追踪
+  - [ ] 成功率统计
+  - [ ] 错误日志记录
+  - [ ] 性能指标监控
+
+### 6.4 竞品内容管理界面
+**优先级**: P1 | **复杂度**: 中等 | **预计时间**: 2天 | **依赖**: 6.3
+
+#### 子任务:
+- [ ] **6.4.1** 创建竞品数据概览界面
+  - [ ] 数据库状态显示
+  - [ ] 网站覆盖统计
+  - [ ] 更新时间展示
+  - [ ] 数据质量指标
+- [ ] **6.4.2** 实现手动更新功能
+  - [ ] 一键更新按钮
+  - [ ] 选择性更新
+  - [ ] 更新进度显示
+  - [ ] 更新结果反馈
+- [ ] **6.4.3** 添加竞品搜索功能
+  - [ ] 游戏名称搜索
+  - [ ] 网站来源筛选
+  - [ ] 匹配度排序
+  - [ ] 搜索结果预览
+- [ ] **6.4.4** 实现匹配结果预览
+  - [ ] 匹配游戏列表
+  - [ ] 相似度评分显示
+  - [ ] 内容片段预览
+  - [ ] 手动调整选项
 
 ---
 
@@ -399,9 +487,12 @@
 - [ ] **7.2.5** 优化Prompt长度控制
 - [ ] **7.2.6** 添加Prompt测试功能
 - [ ] **7.2.7** 实现A/B测试框架
+- [ ] **新增7.2.8** 集成内容长度控制到Prompt
+- [ ] **新增7.2.9** 集成关键词密度控制到Prompt
+- [ ] **新增7.2.10** 实现生成模式差异化Prompt策略
 
 ### 7.3 内容生成与验证
-**优先级**: P0 | **复杂度**: 困难 | **预计时间**: 4天 | **依赖**: 7.2
+**优先级**: P0 | **复杂度**: 困难 | **预计时间**: 5天 | **依赖**: 7.2
 
 #### 子任务:
 - [ ] **7.3.1** 实现单游戏内容生成
@@ -411,6 +502,34 @@
 - [ ] **7.3.5** 添加内容质量检查
 - [ ] **7.3.6** 实现生成进度追踪
 - [ ] **7.3.7** 添加生成失败重试
+- [ ] **新增7.3.8** 实现字数统计和验证
+- [ ] **新增7.3.9** 实现关键词密度检测和分析
+- [ ] **新增7.3.10** 实现内容质量评分系统
+- [ ] **新增7.3.11** 添加生成模式执行逻辑
+
+### 7.4 内容设置管理 🆕
+**优先级**: P0 | **复杂度**: 中等 | **预计时间**: 3天 | **依赖**: 4.1
+
+#### 子任务:
+- [ ] **7.4.1** 设计内容设置数据模型
+  - [ ] 字数控制设置(总体+模块)
+  - [ ] 关键词密度配置
+  - [ ] 生成模式枚举
+  - [ ] 质量参数定义
+- [ ] **7.4.2** 实现内容设置表单组件
+  - [ ] 字数范围滑块组件
+  - [ ] 关键词密度调节器
+  - [ ] 生成模式选择器
+  - [ ] 高级设置折叠面板
+- [ ] **7.4.3** 集成设置到工作流管理
+  - [ ] 工作流创建时的设置配置
+  - [ ] 工作流编辑时的设置修改
+  - [ ] 设置预览和验证
+- [ ] **7.4.4** 实现设置预设模板
+  - [ ] SEO优化模板(严格模式)
+  - [ ] 平衡模板(标准模式)
+  - [ ] 创意模板(自由模式)
+  - [ ] 自定义模板保存
 
 ---
 
@@ -504,7 +623,7 @@
 - [ ] **10.1.6** 实现生成队列管理
 
 ### 10.2 用户界面集成
-**优先级**: P0 | **复杂度**: 中等 | **预计时间**: 3天 | **依赖**: 10.1, 9.2
+**优先级**: P0 | **复杂度**: 中等 | **预计时间**: 4天 | **依赖**: 10.1, 9.2, 7.4
 
 #### 子任务:
 - [ ] **10.2.1** 创建内容生成主界面
@@ -517,16 +636,24 @@
   - [ ] 数据状态显示卡片
   - [ ] 结构化数据选择组件
   - [ ] 高级选项折叠面板
+  - [ ] **新增** 内容设置快速预览(字数、密度、模式)
+  - [ ] **新增** 高级设置模态框集成
 - [ ] **10.2.3** 添加进度显示组件
   - [ ] 进度条动画设计
   - [ ] 百分比和状态文字
   - [ ] 当前处理项目显示
   - [ ] 错误和成功状态指示
+  - [ ] **新增** 实时字数统计显示
+  - [ ] **新增** 关键词密度实时监控
+  - [ ] **新增** 内容质量评分显示
 - [ ] **10.2.4** 实现结果展示界面
   - [ ] 分屏预览布局
   - [ ] 生成项目列表
   - [ ] 详情查看面板
   - [ ] 切换动画效果
+  - [ ] **新增** 内容质量分析面板
+  - [ ] **新增** 关键词密度可视化图表
+  - [ ] **新增** 字数分布统计图
 - [ ] **10.2.5** 添加操作按钮集成
   - [ ] 开始/暂停/停止按钮
   - [ ] 按钮状态变化动画
@@ -632,10 +759,14 @@
 - **Week 3**: 完成设计系统和通用组件库 ✅
 - **Week 5**: 完成工作流管理和CSV处理 ✅
 - **Week 7**: 完成竞品采集功能 ✅
-- **Week 8**: 完成AI生成核心功能 ✅
+- **Week 8**: 完成AI生成核心功能和内容设置管理 🔄 **已增强**
 - **Week 9**: 完成结构化数据生成和预览功能 ✅
-- **Week 10**: 完成流程整合和UI集成 ✅
-- **Week 12**: 完成测试优化和正式发布 ✅
+- **Week 10**: 完成内容质量分析和密度控制功能 🆕
+- **Week 11**: 完成流程整合和高级UI集成 🔄 **已延后**
+- **Week 12**: 完成测试优化 🔄 **已延后**
+- **Week 13**: 完成正式发布 🔄 **已延后**
+
+**注：由于新增内容设置管理、质量控制等功能，项目周期延长1周**
 
 ---
 
