feat(forms): 完成5.2.7批量数据编辑功能 - 实现BatchDataEditor组件支持多行数据同时编辑、查找替换、数据转换等功能

--- a/docs/产品设计文档.md
+++ b/docs/产品设计文档.md
@@ -166,23 +166,149 @@ interface CompetitorContent {
 - **解析错误**：记录错误日志，跳过有问题的页面
 - **内容为空**：标记为无效内容，不参与生成过程
 
-### 2.4 AI内容生成模块
+### 2.4 JSON格式智能分析模块 🆕
 
-#### 2.4.1 生成流程
-1. **输入预处理**：清理和优化games.json格式，控制Prompt长度
-2. **内容参数配置**：应用字数控制、关键词密度等设置
-3. **竞品内容整合**：将采集的竞品内容整合到生成上下文
-4. **智能Prompt构建**：根据生成模式和质量参数构建Prompt
-5. **并行生成**：支持多游戏并行处理，提升生成效率
-6. **内容校验**：验证生成内容的格式、字数、关键词密度等
-7. **质量评估**：评估内容质量并提供优化建议
+#### 2.4.1 AI格式分析引擎
+**核心目标**：确保生成的内容格式完全匹配用户工作流提供的games.json格式，避免格式不一致问题。
 
-#### 2.4.2 Prompt优化策略
+#### 2.4.2 分析流程
+1. **格式解析**：AI深度分析用户提供的games.json示例格式
+2. **结构理解**：识别JSON的字段层级、数据类型、嵌套关系
+3. **值类型推断**：分析每个字段的值类型（字符串、数组、对象、数字、布尔值）
+4. **格式标准制定**：AI确定每个字段的标准输出格式和约束条件
+5. **验证规则生成**：生成格式验证规则，确保输出一致性
+
+#### 2.4.3 智能分析能力
+- **字段类型识别**：自动识别string、array、object、number、boolean等数据类型
+- **数组格式分析**：理解数组元素类型（字符串数组、对象数组等）
+- **嵌套结构解析**：支持多层嵌套对象的格式分析
+- **可选字段检测**：区分必填字段和可选字段
+- **值约束推断**：推断字段值的长度限制、格式要求等
+- **命名规范识别**：理解字段命名习惯（camelCase、snake_case等）
+
+#### 2.4.4 格式标准输出
+```typescript
+interface FormatAnalysisResult {
+  schema: {
+    [fieldName: string]: {
+      type: 'string' | 'number' | 'boolean' | 'array' | 'object';
+      required: boolean;
+      arrayItemType?: string;
+      nestedFields?: FormatAnalysisResult['schema'];
+      constraints?: {
+        maxLength?: number;
+        minLength?: number;
+        pattern?: string;
+        allowedValues?: any[];
+      };
+      examples: any[];
+    };
+  };
+  formatRules: string[];
+  validationRules: ValidationRule[];
+  outputTemplate: any;
+}
+
+// 示例输出
+{
+  "schema": {
+    "gameName": {
+      "type": "string",
+      "required": true,
+      "constraints": { "maxLength": 100 },
+      "examples": ["Subway Surfers", "Temple Run"]
+    },
+    "categories": {
+      "type": "array",
+      "required": true,
+      "arrayItemType": "string",
+      "examples": [["Action", "Adventure"], ["Puzzle", "Casual"]]
+    },
+    "gameInfo": {
+      "type": "object",
+      "required": true,
+      "nestedFields": {
+        "description": { "type": "string", "required": true },
+        "rating": { "type": "number", "required": false }
+      }
+    }
+  },
+  "formatRules": [
+    "所有字符串字段使用双引号包围",
+    "数组元素按示例格式排列",
+    "嵌套对象保持原有层级结构",
+    "数字类型不使用引号"
+  ],
+  "outputTemplate": "基于分析的标准JSON模板"
+}
+```
+
+#### 2.4.5 格式验证机制
+- **实时验证**：生成过程中实时验证输出格式
+- **字段完整性检查**：确保必填字段全部包含
+- **类型一致性验证**：验证每个字段的数据类型正确
+- **格式规范检查**：检查JSON语法、引号使用、缩进等
+- **约束条件验证**：验证字段值是否符合长度、格式等约束
+
+#### 2.4.6 错误修复能力
+- **自动类型转换**：字符串数字自动转换为正确类型
+- **格式修正**：修正常见的JSON格式错误
+- **字段补全**：为缺失的必填字段生成默认值
+- **结构调整**：调整字段顺序和嵌套结构以匹配模板
+
+### 2.5 AI内容生成模块
+
+#### 2.5.1 增强生成流程
+1. **JSON格式分析**：AI分析用户提供的games.json格式，制定输出标准 🆕
+2. **输入预处理**：清理和优化games.json格式，控制Prompt长度
+3. **内容参数配置**：应用字数控制、关键词密度等设置
+4. **竞品内容整合**：将采集的竞品内容整合到生成上下文
+5. **智能Prompt构建**：根据生成模式和质量参数构建Prompt
+6. **格式约束集成**：将分析得出的格式标准集成到生成指令中 🆕
+7. **并行生成**：支持多游戏并行处理，提升生成效率
+8. **格式验证**：使用AI分析的标准验证生成内容格式 🆕
+9. **内容校验**：验证生成内容的字数、关键词密度等
+10. **质量评估**：评估内容质量并提供优化建议
+
+#### 2.5.2 智能Prompt优化策略
+- **格式标准集成**：将AI分析的格式标准完整集成到Prompt中 🆕
+- **字段约束明确**：在Prompt中明确每个字段的类型、长度、格式要求 🆕
+- **结构模板嵌入**：将分析得出的JSON结构模板嵌入Prompt 🆕
+- **验证规则说明**：在Prompt中说明输出验证规则和标准 🆕
 - **字段名保留**：完整保留games.json的字段名
 - **值格式简化**：数组值简化为`["s","b"]`格式，保留类型信息
 - **长度控制**：自动控制Prompt总长度，优先保证核心信息
 - **参数集成**：将字数要求、关键词密度、生成模式等参数融入Prompt
 - **动态调整**：根据内容生成模式动态调整Prompt策略
+
+#### 2.5.3 格式约束Prompt示例
+```
+基于用户提供的games.json格式分析结果，请严格按照以下标准生成内容：
+
+格式标准：
+- gameName: 字符串类型，必填，最大长度100字符
+- categories: 字符串数组，必填，格式 ["类型1", "类型2"]
+- gameInfo: 对象类型，必填，包含description(字符串)和rating(数字，可选)
+
+输出模板：
+{
+  "gameName": "游戏名称",
+  "categories": ["类型1", "类型2"],
+  "gameInfo": {
+    "description": "游戏描述",
+    "rating": 4.5
+  }
+}
+
+验证要求：
+1. 严格遵循字段类型，不可改变
+2. 必填字段必须包含，可选字段根据情况填写
+3. 数组格式必须与示例一致
+4. 对象嵌套结构必须保持
+5. 字符串字段使用双引号，数字字段不使用引号
+
+请基于以上标准生成符合格式的内容...
+```
 
 #### 2.4.3 生成内容模块
 - **游戏简介** (200-300词)：包含主关键词，介绍游戏核心玩法
@@ -481,11 +607,32 @@ interface WorkflowPageProps {
 │  ┌─────────────────────────────────────────┐ │
 │  │  工作流卡片列表                           │ │
 │  │  - 工作流名称 + 描述                     │ │
+│  │  - JSON格式：✅ 已分析 (5个字段) 🆕       │ │
 │  │  - 内容设置：字数800-1200，密度2.5%      │ │
 │  │  - 生成模式：标准模式                     │ │
 │  │  - 创建时间 + 最后修改                   │ │
 │  │  - 操作按钮：编辑/复制/导出/删除          │ │
 │  └─────────────────────────────────────────┘ │
+└─────────────────────────────────────────────┘
+
+// 工作流创建/编辑模态框结构：
+┌─────────────────────────────────────────────┐
+│  📋 创建工作流                      [×]        │
+├─────────────────────────────────────────────┤
+│  基本信息：                                  │
+│  [工作流名称] [描述]                          │
+├─────────────────────────────────────────────┤
+│  JSON格式设置：🆕                            │
+│  [代码编辑器] [分析格式] [查看分析结果]       │
+│  ┌─────────────────────────────────────────┐ │
+│  │ 📊 格式分析结果：                        │ │
+│  │ ✅ 检测到5个字段                         │ │
+│  │ ✅ 2个必填字段，3个可选字段              │ │
+│  │ ✅ 包含字符串(3)、数组(1)、对象(1)       │ │
+│  │ ⚠️ 建议：字段名使用camelCase格式         │ │
+│  └─────────────────────────────────────────┘ │
+├─────────────────────────────────────────────┤
+│  [保存] [取消]                               │
 └─────────────────────────────────────────────┘
 
 // 设计要点：
@@ -494,6 +641,8 @@ interface WorkflowPageProps {
 - 卡片：圆角8px，阴影效果，悬停提升
 - 操作按钮：图标+文字，下拉菜单形式
 - 内容设置预览：小标签形式显示关键配置
+- JSON格式状态：图标+状态文字，颜色编码 🆕
+- 格式分析面板：折叠展开，统计信息清晰 🆕
 ```
 
 #### 3.5.4 数据上传界面
@@ -914,21 +1063,25 @@ NEXT_PUBLIC_APP_URL=https://your-app.vercel.app
 ### 10.1 V1.0 核心功能
 - ✅ 工作流管理
 - ✅ CSV数据上传
+- 🆕 JSON格式智能分析 (新增)
 - ✅ AI内容生成
 - ✅ 结构化数据生成
 - ✅ 结果预览和导出
 
 ### 10.2 V1.1 功能增强
+- 🆕 内容长度控制和关键词密度管理
+- 🆕 内容生成模式配置 (严格/标准/自由)
+- 🆕 内容质量评分和分析
 - 🔄 多语言内容生成支持
 - 🔄 自定义结构化数据模板
 - 🔄 竞品内容采集深度配置
 - 🔄 批量处理进度优化
 
 ### 10.3 V1.2 高级功能
-- 🔄 内容质量评分
 - 🔄 SEO效果分析
 - 🔄 A/B测试支持
 - 🔄 团队协作功能
+- 🔄 格式学习和自适应优化
 
 ---
 
