--- a/docs/产品设计文档.md
+++ b/docs/产品设计文档.md
@@ -256,21 +256,124 @@ interface FormatAnalysisResult {
 - **字段补全**：为缺失的必填字段生成默认值
 - **结构调整**：调整字段顺序和嵌套结构以匹配模板
 
-### 2.5 AI内容生成模块
+### 2.5 三阶段AI生成架构 🔄 **优化拆分**
 
-#### 2.5.1 增强生成流程
-1. **JSON格式分析**：AI分析用户提供的games.json格式，制定输出标准 🆕
-2. **输入预处理**：清理和优化games.json格式，控制Prompt长度
-3. **内容参数配置**：应用字数控制、关键词密度等设置
-4. **竞品内容整合**：将采集的竞品内容整合到生成上下文
-5. **智能Prompt构建**：根据生成模式和质量参数构建Prompt
-6. **格式约束集成**：将分析得出的格式标准集成到生成指令中 🆕
-7. **并行生成**：支持多游戏并行处理，提升生成效率
-8. **格式验证**：使用AI分析的标准验证生成内容格式 🆕
-9. **内容校验**：验证生成内容的字数、关键词密度等
-10. **质量评估**：评估内容质量并提供优化建议
+#### 2.5.1 架构设计目标
+**解决上下文长度问题**：通过合理拆分AI调用步骤，控制单次API调用的上下文长度，提高可靠性和性能。
 
-#### 2.5.2 智能Prompt优化策略
+#### 2.5.2 三阶段拆分流程
+
+**🔍 阶段一：格式分析阶段（Format Analysis Stage）**
+- **执行时机**：工作流创建/编辑时，一次性执行
+- **输入内容**：用户提供的games.json格式示例
+- **AI任务**：深度分析JSON结构，制定格式标准
+- **输出结果**：轻量化的格式约束规则（≤500 tokens）
+- **缓存策略**：结果可缓存复用，避免重复分析
+
+```typescript
+// 阶段一输出示例
+interface FormatRules {
+  compactTemplate: string;      // 简化的JSON模板
+  fieldConstraints: string[];   // 字段约束规则（精简版）
+  validationRules: string[];    // 验证规则（核心规则）
+  formatHash: string;           // 格式指纹，用于缓存
+}
+
+// 示例输出（控制在500 tokens内）
+{
+  "compactTemplate": '{"name":"str","tags":["str"],"info":{"desc":"str","rating":num}}',
+  "fieldConstraints": [
+    "name: 必填字符串, max:100",
+    "tags: 必填字符串数组",
+    "info.desc: 必填字符串",
+    "info.rating: 可选数字"
+  ],
+  "validationRules": [
+    "严格遵循字段类型",
+    "必填字段必须包含",
+    "数组格式保持一致"
+  ],
+  "formatHash": "md5_hash_of_format"
+}
+```
+
+**⚡ 阶段二：内容生成阶段（Content Generation Stage）**
+- **执行时机**：用户触发内容生成时
+- **输入内容**：游戏基础信息 + 竞品内容摘要 + 轻量化格式规则
+- **AI任务**：生成游戏内容，遵循格式约束
+- **输出结果**：原始内容（可能存在格式不完美）
+- **上下文控制**：≤4000 tokens per game
+
+```typescript
+// 阶段二Prompt结构（示例）
+const generationPrompt = `
+游戏信息：${gameBasicInfo}                    // ~300 tokens
+竞品参考：${competitorContentSummary}         // ~800 tokens  
+格式要求：${compactFormatRules}               // ~500 tokens
+内容设置：${contentSettings}                  // ~200 tokens
+生成指令：请基于以上信息生成游戏内容...        // ~200 tokens
+// 总计：~2000 tokens，为内容生成留有充足空间
+`;
+```
+
+**✅ 阶段三：格式校正阶段（Format Validation & Fix Stage）**
+- **执行时机**：内容生成完成后
+- **输入内容**：生成的原始内容 + 详细格式标准
+- **AI任务**：验证和修正格式，确保完全匹配
+- **输出结果**：格式完美的最终内容
+- **回退机制**：如果修正失败，重新生成
+
+```typescript
+// 阶段三Prompt结构（示例）
+const validationPrompt = `
+原始内容：${generatedContent}                 // ~2000 tokens
+格式标准：${detailedFormatRules}              // ~1000 tokens
+修正指令：请检查并修正格式，确保完全匹配...    // ~200 tokens
+// 总计：~3200 tokens，专注于格式修正
+`;
+```
+
+#### 2.5.3 阶段间数据传递优化
+
+**格式规则压缩策略**：
+- **完整分析结果**：存储在本地，用于阶段三的详细验证
+- **压缩规则**：传递给阶段二，控制上下文长度
+- **指纹缓存**：避免重复分析相同格式
+
+**竞品内容摘要策略**：
+- **智能摘要**：提取关键信息，控制在800 tokens内
+- **分级筛选**：按相关性筛选最有价值的竞品内容
+- **动态调整**：根据剩余上下文动态调整摘要长度
+
+#### 2.5.4 容错和重试机制
+
+**阶段一失败处理**：
+- 格式分析失败 → 使用预设通用格式
+- 用户可手动修正分析结果
+
+**阶段二失败处理**：
+- 内容生成失败 → 重试（最多3次）
+- 调整竞品内容长度后重试
+
+**阶段三失败处理**：
+- 格式修正失败 → 回退到阶段二重新生成
+- 提供手动编辑选项
+
+#### 2.5.5 性能优化效果
+
+**上下文长度控制**：
+- 单次API调用控制在4000 tokens内
+- 避免超长上下文导致的失败
+
+**缓存优化**：
+- 格式分析结果可复用
+- 竞品内容可预处理和缓存
+
+**并发处理优化**：
+- 阶段二可以并行处理多个游戏
+- 阶段三可以批量验证格式
+
+#### 2.5.6 智能Prompt优化策略
 - **格式标准集成**：将AI分析的格式标准完整集成到Prompt中 🆕
 - **字段约束明确**：在Prompt中明确每个字段的类型、长度、格式要求 🆕
 - **结构模板嵌入**：将分析得出的JSON结构模板嵌入Prompt 🆕
@@ -281,81 +384,53 @@ interface FormatAnalysisResult {
 - **参数集成**：将字数要求、关键词密度、生成模式等参数融入Prompt
 - **动态调整**：根据内容生成模式动态调整Prompt策略
 
-#### 2.5.3 格式约束Prompt示例
+#### 2.5.7 格式约束Prompt示例
 ```
-基于用户提供的games.json格式分析结果，请严格按照以下标准生成内容：
+【阶段二 - 内容生成】
+基于压缩格式规则生成内容：
 
-格式标准：
+格式要求（精简版）：
+- name: 必填字符串, max:100
+- tags: 必填字符串数组
+- info.desc: 必填字符串
+
+游戏信息：${gameBasicInfo}
+竞品参考：${competitorContentSummary}
+请生成符合格式的游戏内容...
+
+【阶段三 - 格式校正】
+基于详细格式标准校正内容：
+
+原始内容：${generatedContent}
+
+详细格式标准：
 - gameName: 字符串类型，必填，最大长度100字符
 - categories: 字符串数组，必填，格式 ["类型1", "类型2"]
 - gameInfo: 对象类型，必填，包含description(字符串)和rating(数字，可选)
 
-输出模板：
-{
-  "gameName": "游戏名称",
-  "categories": ["类型1", "类型2"],
-  "gameInfo": {
-    "description": "游戏描述",
-    "rating": 4.5
-  }
-}
-
-验证要求：
+校正要求：
 1. 严格遵循字段类型，不可改变
 2. 必填字段必须包含，可选字段根据情况填写
 3. 数组格式必须与示例一致
 4. 对象嵌套结构必须保持
 5. 字符串字段使用双引号，数字字段不使用引号
 
-请基于以上标准生成符合格式的内容...
+请校正格式，确保完全匹配...
 ```
 
-#### 2.4.3 生成内容模块
-- **游戏简介** (200-300词)：包含主关键词，介绍游戏核心玩法
-- **玩法操作** (150-250词)：详细说明游戏操作方式和规则
-- **游戏特色** (100-200词)：突出游戏独特功能和亮点
-- **玩家真实好评** (150-200词)：模拟真实用户评价和反馈
-- **视频内容描述** (100-150词)：如有视频链接，生成视频内容描述
+### 2.6 结构化数据生成模块
 
-#### 2.4.4 内容生成模式详解
-- **严格模式 (Strict)**：
-  - 严格按照设定的字数范围生成
-  - 精确控制关键词密度
-  - 只生成必要的内容模块
-  - 适合有明确内容规范的网站
-
-- **标准模式 (Standard)**：
-  - 在字数范围内适度灵活
-  - 自然融入关键词，保持可读性
-  - 可适当增加相关信息丰富内容
-  - 平衡SEO效果和用户体验
-
-- **自由模式 (Free)**：
-  - AI可自由发挥，增加创意内容
-  - 自然的关键词分布，避免过度优化
-  - 可增加游戏技巧、背景故事等额外内容
-  - 注重内容质量和用户吸引力
-
-#### 2.4.5 关键词密度控制机制
-- **密度计算**：实时计算关键词出现频率
-- **自然分布**：确保关键词在各段落中自然分布
-- **同义词替换**：使用同义词避免关键词堆砌
-- **语义相关**：融入语义相关的词汇增强相关性
-- **质量监控**：监控内容可读性，避免过度优化
-
-### 2.5 结构化数据生成模块
-
-#### 2.5.1 支持的结构化数据类型
+#### 2.6.1 支持的结构化数据类型
 - **VideoGame对象**：游戏基本信息
 - **VideoObject对象**：视频相关信息
 - **Review对象**：用户评价
 - **BreadcrumbList对象**：面包屑导航
 - **FAQPage对象**：常见问题
 
-#### 2.5.2 结构化数据标准
+#### 2.6.2 结构化数据标准
 严格遵循schema.org标准和谷歌SEO最佳实践，参考template.md中的格式。
 
-#### 2.5.3 示例结构化数据
+#### 2.6.3 示例结构化数据
 ```json
 {
   "@context": "https://schema.org",
@@ -374,19 +449,19 @@ interface FormatAnalysisResult {
 }
 ```
 
-### 2.6 结果预览与导出模块
+### 2.7 结果预览与导出模块
 
-#### 2.6.1 预览功能
+#### 2.7.1 预览功能
 - **实时预览**：生成过程中实时显示结果
 - **格式化显示**：支持JSON格式化显示
 - **内容编辑**：支持对生成结果进行微调
 
-#### 2.6.2 导出功能
+#### 2.7.2 导出功能
 - **JSON格式导出**：支持标准JSON格式下载
 - **文件命名规则**：`{工作流名称}_{YYYYMMDD}_{HHMMSS}.json`
 - **批量导出**：支持多游戏结果的批量导出
 
-#### 2.6.3 错误处理
+#### 2.7.3 错误处理
 - **生成失败**：显示具体错误信息和重试选项
 - **字段缺失**：标记缺失字段，提供补充建议
 - **格式错误**：自动校验并提示格式问题
