feat(sitemap): 完成6.1.2 Sitemap抓取服务开发

--- a/docs/开发任务计划.md
+++ b/docs/开发任务计划.md
@@ -391,16 +391,16 @@
 **优先级**: P0 | **复杂度**: 中等 | **预计时间**: 3天 | **依赖**: 无
 
 #### 子任务:
-- [ ] **6.1.1** 定义竞品网站配置
-  - [ ] 创建网站配置数据结构
-  - [ ] 配置CoolMathGames sitemap
-  - [ ] 配置GameDistribution sitemap
-  - [ ] 配置TwoPlayerGames sitemap
-- [ ] **6.1.2** 实现Sitemap抓取服务
-  - [ ] HTTP请求服务
-  - [ ] XML解析功能
-  - [ ] 网络异常处理
-  - [ ] 请求重试机制
+- [x] **6.1.1** 定义竞品网站配置 ✅ 已完成 2025-01-24
+  - [x] 创建网站配置数据结构
+  - [x] 配置CoolMathGames sitemap
+  - [x] 配置GameDistribution sitemap
+  - [x] 配置TwoPlayerGames sitemap
+- [x] **6.1.2** 实现Sitemap抓取服务 ✅ 已完成 2025-01-24
+  - [x] HTTP请求服务
+  - [x] XML解析功能
+  - [x] 网络异常处理
+  - [x] 请求重试机制
 - [ ] **6.1.3** 实现竞品数据库管理
   - [ ] 本地存储结构设计
   - [ ] 游戏索引创建
