--- a/docs/开发任务计划.md
+++ b/docs/开发任务计划.md
@@ -387,7 +387,7 @@
 
 ## 六、竞品内容采集模块 (Week 6-7)
 
-### 6.1 Sitemap管理与解析
+### 6.1 Sitemap管理与解析 ✅ 已完成 2025-01-24
 **优先级**: P0 | **复杂度**: 中等 | **预计时间**: 3天 | **依赖**: 无
 
 #### 子任务:
@@ -406,11 +406,11 @@
   - [x] 游戏索引创建
   - [x] 数据更新机制
   - [x] 过期数据清理
-- [ ] **6.1.4** 添加定时更新功能
-  - [ ] 定时任务调度
-  - [ ] 增量更新逻辑
-  - [ ] 更新状态追踪
-  - [ ] 更新日志记录
+- [x] **6.1.4** 添加定时更新功能 ✅ 已完成 2025-01-24
+  - [x] 定时任务调度
+  - [x] 增量更新逻辑
+  - [x] 更新状态追踪
+  - [x] 更新日志记录
 
 ### 6.2 游戏匹配算法
 **优先级**: P0 | **复杂度**: 困难 | **预计时间**: 4天 | **依赖**: 6.1
